@@ -1,3 +1,9 @@
+2002-08-13  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* cygwin/post-lilypond.sh: Fix and update.
+
+	* cygwin/zlily-profile.sh: Remove.
+
 2002-08-12  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* GNUmakefile.in (EXTRA_DIST_FILES): Add server.el.patch.
